<resources>
    <string name="app_name">Demo App</string>
    <string name="google">continue with google</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="message_dialog_signing_in">Signing in . . .</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_in_facebook">continue with facebook</string>
    <string name="authenticating">Authenticating . . .</string>
    <string name="app_id" translatable="false">2008262402741279</string>
    <string name="prompt_name">NAME</string>
    <string name="action_sign_in">SIGN IN</string>
    <string name="action_register">REGISTER</string>
    <string name="prompt_email">EMAIL</string>
    <string name="prompt_password">PASSWORD</string>
    <string name="action_sign_in_short">SIGN IN</string>
    <string name="prompt_confirm_password">CONFIRM PASSWORD</string>
    <string name="message_dialog_registering">Registering user . . .</string>
    <string name="error_registration">All fields are mandatory</string>
    <string name="error_password">Password does not match !</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="name_of_user" translatable="false">nameofuser</string>
    <string name="welcome_note">Welcome,</string>
    <string name="prompt_location_on">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="table_users" translatable="false">users</string>
    <string name="table_users_history" translatable="false">userHistory</string>
    <string name="text_date_time">Date :</string>
    <string name="text_latitude">Latitude</string>
    <string name="text_longitude">Longitude</string>
    <string name="fetching_history">Fetching user history . . .</string>
    <string name="action_logout">LOGOUT</string>
    <string name="error_mandatory">* mandatory</string>
    <string name="error_invalid_email">Invalid Email.</string>
    <string name="promps_double_back">Please click BACK again to exit</string>
    <string name="text_history">Your login history</string>
</resources>
