<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/fab_margin">

    <LinearLayout
        android:id="@+id/layout_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/padding_text">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_note"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/txtNameOfUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding_text"
            android:textColor="@android:color/black" />

    </LinearLayout>

    <TextView
        android:id="@+id/txtLoginHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_welcome"
        android:padding="@dimen/padding_text"
        android:text="@string/text_history"
        android:textColor="@android:color/black" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_login_history"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btnLogout"
        android:layout_below="@+id/txtLoginHistory"
        android:divider="@android:color/black"
        android:scrollbars="vertical" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:hint="@string/action_logout"
        android:onClick="onClickLogout" />

</RelativeLayout>