<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_users"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">>

    <Button
        android:id="@+id/btn_sign_in_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickSignInGoogle"
        android:text="@string/google" />

    <FrameLayout
        android:id="@+id/layout_facebook_custom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@android:color/transparent"
            android:elevation="5dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:src="@drawable/ic_facebook" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="1dp"
            android:padding="15dp"
            android:text="@string/sign_in_facebook"
            android:textAlignment="center"
            android:textColor="@android:color/white" />

    </FrameLayout>

    <RelativeLayout
        android:id="@+id/layout_facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:padding="3dp"
        android:visibility="gone">

        <com.facebook.login.widget.LoginButton
            android:id="@+id/button_facebook_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:textAlignment="center" />

        <Button
            android:id="@+id/button_facebook_signout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/sign_out"
            android:visibility="gone" />

    </RelativeLayout>

</LinearLayout>
